--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@ a:link, a:visited{
     color: black;
     text-decoration: none;
     font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
-	font-size: 1em;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
+    font-size: 1em;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 26.4px;
 }
 
 
@@ -22,9 +22,9 @@ a:link, a:visited{
     border: 0px;
     line-height: 26.4px;
     font-size: 1em;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
 }
 
 .headinfo {
@@ -49,7 +49,7 @@ a:link, a:visited{
 }
 
 .item {
-    min-width: 400px;
+    max-width: 600px;
 }
 
 .header {
@@ -70,11 +70,11 @@ a:link, a:visited{
 }
 
 .p-name {
-	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
-	font-size: 2em;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
+    font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+    font-size: 2em;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
     padding-left: 5px;
     margin-bottom: 1vh;
     margin-top: 3vh;
