--- a/style.css
+++ b/style.css
@@ -31,18 +31,16 @@ a, a:link, a:visited {
 }
 
 .info {
-    width: 30em;
-    left: 30px;
+    max-width: 90%;
 }
 
 .gallery {
-    right: 20px;
-    width: 83px;
+    max-width: 83px;
 }
 
 .icons {
     position: relative;
-    bottom: 0px;
+    bottom: 10px;
 }
 
 .item {
